--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
             <link rel="stylesheet" href="reset.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <style>
 
         /* header color css and clear floats after the column */
